ops/instances/maria-paez/outbox/logs-hoy.out
# ejecutado: 2026-05-18T08:35:01-03:00
# host: ubuntu-4gb-nbg1-2
# instancia: maria-paez
# script:
#   #!/bin/bash
#   set +e
#   DB="/root/secretaria/state/maria-paez/db/maria.sqlite"
#   HOY=$(date +%Y-%m-%d)
#   
#   echo "═══ pm2 status ═══"
#   pm2 jlist 2>/dev/null | python3 -c '
#   import sys, json, datetime
#   d=[x for x in json.load(sys.stdin) if x["name"]=="maria-paez"]
#   r=d[0] if d else None
#   if r:
#       print("pid:", r["pid"], "status:", r["pm2_env"]["status"], "restarts:", r["pm2_env"]["restart_time"])
#       print("arrancó:", datetime.datetime.fromtimestamp(r["pm2_env"]["pm_uptime"]/1000).isoformat())
#   '
#   
#   echo ""
#   echo "═══ Restarts/boots desde 00:00 ═══"
#   sqlite3 -header -column "$DB" "SELECT datetime(timestamp), substr(cuerpo,1,120) FROM eventos WHERE timestamp >= '${HOY}' AND canal='sistema' AND (cuerpo LIKE '%arranc%' OR cuerpo LIKE '%shutdown%' OR cuerpo LIKE '%SIGINT%') ORDER BY timestamp ASC;"
#   
#   echo ""
#   echo "═══ Resumen actividad por canal/dirección desde 00:00 ═══"
#   sqlite3 -header -column "$DB" "SELECT canal, direccion, COUNT(*) AS n FROM eventos WHERE timestamp >= '${HOY}' GROUP BY canal, direccion ORDER BY canal, direccion;"
#   
#   echo ""
#   echo "═══ Mensajes entrantes WA por usuario desde 00:00 ═══"
#   sqlite3 -header -column "$DB" "
#   SELECT
#     COALESCE(u.nombre, '(desconocido/tercero)') AS user,
#     e.tipo_original AS tipo,
#     COUNT(*) AS n
#   FROM eventos e
#   LEFT JOIN usuarios u ON u.id = e.usuario_id
#   WHERE e.timestamp >= '${HOY}' AND e.canal='whatsapp' AND e.direccion='entrante'
#   GROUP BY u.nombre, e.tipo_original
#   ORDER BY n DESC LIMIT 20;
#   "
#   
#   echo ""
#   echo "═══ Acciones ejecutadas hoy (top tipos) ═══"
#   sqlite3 -header -column "$DB" "
#   SELECT
#     REPLACE(REPLACE(substr(cuerpo, 19), ' ', ''), ':', '') AS accion,
#     COUNT(*) AS n
#   FROM eventos
#   WHERE timestamp >= '${HOY}' AND canal='sistema' AND cuerpo LIKE 'acción ejecutada:%'
#   GROUP BY 1 ORDER BY n DESC LIMIT 20;
#   "
#   
#   echo ""
#   echo "═══ Acciones FALLIDAS hoy ═══"
#   sqlite3 -header -column "$DB" "
#   SELECT datetime(timestamp), substr(cuerpo, 1, 200) AS msg
#   FROM eventos
#   WHERE timestamp >= '${HOY}' AND canal='sistema' AND cuerpo LIKE 'acción FALLÓ:%'
#   ORDER BY timestamp ASC LIMIT 30;
#   "
#   
#   echo ""
#   echo "═══ Errores pm2 logs desde 00:00 (filtrados) ═══"
#   pm2 logs maria-paez --lines 3000 --nostream 2>&1 | grep -E "^0\|maria-pa | 2026-05-18" | grep -iE "error|fatal|SyntaxError|Timeout|killed|ABORTADO" | tail -40
#   
#   echo ""
#   echo "═══ Llamadas Claude hoy (cuántas, tiempo, errores) ═══"
#   sqlite3 -header -column "$DB" "
#   SELECT
#     COUNT(*) AS total,
#     SUM(CASE WHEN cuerpo NOT LIKE '%ERROR=%' THEN 1 ELSE 0 END) AS ok,
#     SUM(CASE WHEN cuerpo LIKE '%ERROR=%' THEN 1 ELSE 0 END) AS errores,
#     MIN(json_extract(metadata_json, '\$.ms')) AS min_ms,
#     MAX(json_extract(metadata_json, '\$.ms')) AS max_ms,
#     ROUND(AVG(json_extract(metadata_json, '\$.ms'))) AS avg_ms
#   FROM eventos
#   WHERE timestamp >= '${HOY}' AND canal='sistema' AND cuerpo LIKE 'claude_call%';
#   "
#   
#   echo ""
#   echo "═══ Healthcheck actual ═══"
#   bash /root/secretaria/ops/healthcheck.sh | python3 -c '
#   import sys, json
#   d=json.load(sys.stdin)
#   print("overall_ok:", d["overall_ok"])
#   for k, v in d["checks"].items():
#       print(f"  {k}: {v[\"ok\"]}")
#   '

# ───── output ─────
═══ pm2 status ═══
pid: 1014210 status: online restarts: 54
arrancó: 2026-05-17T23:25:02.201000

═══ Restarts/boots desde 00:00 ═══
datetime(timestamp)  substr(cuerpo,1,120)                                                                             
-------------------  -------------------------------------------------------------------------------------------------
2026-05-18 00:01:02  shutdown por SIGINT                                                                              
2026-05-18 00:01:09  Maria arrancó — WA, Gmail, recordatorios, programados, brief y meeting-prep activos (12 usuarios)
2026-05-18 00:19:02  shutdown por SIGINT                                                                              
2026-05-18 00:19:09  Maria arrancó — WA, Gmail, recordatorios, programados, brief y meeting-prep activos (12 usuarios)
2026-05-18 01:09:02  shutdown por SIGINT                                                                              
2026-05-18 01:09:11  Maria arrancó — WA, Gmail, recordatorios, programados, brief y meeting-prep activos (12 usuarios)
2026-05-18 01:13:02  shutdown por SIGINT                                                                              
2026-05-18 01:13:09  Maria arrancó — WA, Gmail, recordatorios, programados, brief y meeting-prep activos (12 usuarios)
2026-05-18 01:15:02  shutdown por SIGINT                                                                              
2026-05-18 01:15:08  Maria arrancó — WA, Gmail, recordatorios, programados, brief y meeting-prep activos (12 usuarios)
2026-05-18 02:08:02  shutdown por SIGINT                                                                              
2026-05-18 02:08:09  Maria arrancó — WA, Gmail, recordatorios, programados, brief y meeting-prep activos (12 usuarios)
2026-05-18 02:25:02  shutdown por SIGINT                                                                              
2026-05-18 02:25:09  Maria arrancó — WA, Gmail, recordatorios, programados, brief y meeting-prep activos (12 usuarios)

═══ Resumen actividad por canal/dirección desde 00:00 ═══
canal     direccion  n 
--------  ---------  --
sistema   interno    18
whatsapp  entrante   4 
whatsapp  saliente   12

═══ Mensajes entrantes WA por usuario desde 00:00 ═══
user              tipo  n
----------------  ----  -
Diego             chat  2
Diego                   1
Santiago Bignone  chat  1

═══ Acciones ejecutadas hoy (top tipos) ═══

═══ Acciones FALLIDAS hoy ═══

═══ Errores pm2 logs desde 00:00 (filtrados) ═══
0|maria-pa | 2026-05-17 16:52:00: *RAS: Correctable Errors collector initialized* → Normal. El kernel inicializó el colector de errores corregibles 
0|maria-pa | 2026-05-16 13:39:42: [WA/Diego] Claude falló: Timeout 180000ms invocando claude
0|maria-pa | 2026-05-16 19:27:29: [WA/Diego] Claude falló: Timeout 180000ms invocando claude
0|maria-pa | 2026-05-16 19:34:50: [WA/Diego] Claude falló: Timeout 180000ms invocando claude
0|maria-pa | 2026-05-17 16:07:03: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:04: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:05: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:06: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:07: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:08: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:08: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:09: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:10: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:11: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:12: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:13: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:13: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:14: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:15: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-17 16:07:16: SyntaxError: Unexpected identifier
0|maria-pa | 2026-05-18 07:15:19: [WA debounce] error despachando grupo de 5491134274828@c.us: ReferenceError: startTs is not defined
0|maria-pa | 2026-05-18 07:15:19:     at Timeout._onTimeout (/root/secretaria/whatsapp-handler.js:431:30)
0|maria-pa | 2026-05-18 07:15:19:     at listOnTimeout (node:internal/timers:569:17)
0|maria-pa | 2026-05-18 08:33:28: [WA debounce] error despachando grupo de 5491132317896@c.us: ReferenceError: startTs is not defined
0|maria-pa | 2026-05-18 08:33:28:     at Timeout._onTimeout (/root/secretaria/whatsapp-handler.js:431:30)
0|maria-pa | 2026-05-18 08:33:28:     at listOnTimeout (node:internal/timers:569:17)
0|maria-pa | 2026-05-18 08:33:44: [WA debounce] error despachando grupo de 5491132317896@c.us: ReferenceError: startTs is not defined
0|maria-pa | 2026-05-18 08:33:44:     at Timeout._onTimeout (/root/secretaria/whatsapp-handler.js:431:30)
0|maria-pa | 2026-05-18 08:33:44:     at listOnTimeout (node:internal/timers:569:17)

═══ Llamadas Claude hoy (cuántas, tiempo, errores) ═══
total  ok  errores  min_ms  max_ms  avg_ms
-----  --  -------  ------  ------  ------
0                                         

═══ Healthcheck actual ═══
  File "<string>", line 6
    print(f"  {k}: {v[\"ok\"]}")
                       ^
SyntaxError: unexpected character after line continuation character

# exit=0
